@@ -9,6 +9,7 @@ New
 
 * asthma view in Conditions tab
 * 'include up-to-date' option for cancer screening
+* COVID-19 bulk billing incentive prompt in billing view
 
 Fix
 
